src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

* {
  scrollbar-width: auto;
  scrollbar-color: #e9e9e9 #1e293b;
}


body {
  color: var(--foreground);
  background: var(--background);
  font-family: 'Poppins', sans-serif;
  transition: background 0.3s, color 0.3s;
}


@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0px);
  }
}

.animate-fadeIn {
  animation: fadeIn 0.8s ease-out;
}


@keyframes marquee {
  0% {
    transform: translateX(0);
  }

  100% {
    transform: translateX(-50%);
  }
}

.animate-marquee {
  animation: marquee 25s linear infinite;
}

